--- a/multimedia/desktop.ini
+++ b/multimedia/desktop.ini
@@ -4,3 +4,5 @@ vegeta 1600.jpg=@vegeta 1600,0
 burger 1600.jpg=@burger 1600,0
 papas 1600.jpg=@papas 1600,0
 cuadrado 1600.jpg=@cuadrado 1600,0
+lomo enfoque.mp4=@lomo enfoque,0
+Lomo lento.mp4=@Lomo lento,0
